--- a/src/view/style/main_menu_style.css
+++ b/src/view/style/main_menu_style.css
@@ -37,7 +37,7 @@
     -fx-text-fill: black;
     -fx-width: 150px;
 }
-.btn_close:hover{
+#btn_close:hover, #btn_minimize:hover,#btn_loudspeaker:hover , #btn_oog:hover {
     -fx-background-color: whitesmoke;
 
 }
