--- a/src/view/style/main_menu_style.css
+++ b/src/view/style/main_menu_style.css
@@ -1,41 +1,52 @@
 .BorderPane{
-    -fx-background-image: url("../img/bgmol.png");
+    -fx-background-image: url("../img/KeuzemenuLeeg.png");
 }
 
 #bp_pane{
-    -fx-background-image: url("../img/bgmol.png");
-	-fx-background-size:800 600;
+    -fx-background-image: url("../img/KeuzemenuLeeg.png");
+	-fx-background-size:1000 600;
 	-fx-background-position: center center;
 	-fx-background-repeat: stretch;
 }
 
 #btn_loudspeaker{
-    -fx-graphic: url("../img/speaker.png");
+    -fx-graphic: url("../img/Icon_LuidsprekerLeeg.png");
     -fx-background-color: transparent;
 }
 
 #btn_oog{
-    -fx-graphic: url("../img/focus.png");
+    -fx-graphic: url("../img/Icon_Oog.png");
     -fx-background-color: transparent;
 }
 
 #btn_close{
-    -fx-graphic: url("../img/close.png");
+    -fx-graphic: url("../img/Icon_Kruisje.png");
     -fx-background-color: transparent;
 }
 
 #btn_minimize{
-    -fx-graphic: url("../img/substract.png");
+    -fx-graphic: url("../img/Icon_Minnetje.png");
     -fx-background-color: transparent;
 }
 
-#btn_joinspel, #btn_exitspel, #btn_hostspel, #btn_hervatspel{
-    -fx-padding: 10;   
-    -fx-background-color: white;
-    -fx-font-family: Helvetica;
-    -fx-font-weight: bold;
-    -fx-text-fill: black;
-    -fx-width: 150px;
+#btn_joinspel{
+    -fx-graphic: url("../img/Button_JoinSpel.png");
+    -fx-background-color: transparent;
+}
+
+#btn_hostspel{
+    -fx-graphic: url("../img/Button_HostSpel.png");
+    -fx-background-color: transparent;
+}
+
+#btn_exitspel{
+    -fx-graphic: url("../img/Button_Exit.png");
+    -fx-background-color: transparent;
+}
+
+#btn_hervatspel{
+    -fx-graphic: url("../img/Button_HervatSpel.png");
+    -fx-background-color: transparent;
 }
 
 #btn_close:hover, #btn_minimize:hover, #btn_loudspeaker:hover, #btn_oog:hover {
@@ -43,6 +54,6 @@
 
 }
 #btn_joinspel:hover, #btn_exitspel:hover, #btn_hostspel:hover, #btn_hervatspel:hover{
-    -fx-background-color: black;
+    -fx-background-color: white;
     -fx-text-fill: white;
 }
