--- a/bin/view/style/main_menu_style.css
+++ b/bin/view/style/main_menu_style.css
@@ -1,36 +1,51 @@
 .BorderPane{
-    -fx-background-image: url("../img/bgmol.png");
+    -fx-background-image: url("../img/KeuzemenuLeeg.png");
 }
 
 #bp_pane{
-    -fx-background-image: url("../img/bgmol.png");
-	-fx-background-size:800 600;
+    -fx-background-image: url("../img/KeuzemenuLeeg.png");
+	-fx-background-size:1000 600;
 	-fx-background-position: center center;
 	-fx-background-repeat: stretch;
 }
 
 #btn_loudspeaker{
-    -fx-graphic: url("../img/speaker.png");
+    -fx-graphic: url("../img/Icon_LuidsprekerLeeg.png");
     -fx-background-color: transparent;
 }
 
 #btn_oog{
-    -fx-graphic: url("../img/focus.png");
+    -fx-graphic: url("../img/Icon_Oog.png");
     -fx-background-color: transparent;
 }
 
 #btn_close{
-    -fx-graphic: url("../img/close.png");
+    -fx-graphic: url("../img/Icon_Kruisje.png");
     -fx-background-color: transparent;
 }
 
 #btn_minimize{
-    -fx-graphic: url("../img/substract.png");
+    -fx-graphic: url("../img/Icon_Minnetje.png");
     -fx-background-color: transparent;
 }
 
 #btn_joinspel{
     -fx-graphic: url("../img/Button_JoinSpel.png");
+    -fx-background-color: transparent;
+}
+
+#btn_hostspel{
+    -fx-graphic: url("../img/Button_HostSpel.png");
+    -fx-background-color: transparent;
+}
+
+#btn_exitspel{
+    -fx-graphic: url("../img/Button_Exit.png");
+    -fx-background-color: transparent;
+}
+
+#btn_hervatspel{
+    -fx-graphic: url("../img/Button_HervatSpel.png");
     -fx-background-color: transparent;
 }
 
