--- a/bin/view/SpelbordStyle.css
+++ b/bin/view/SpelbordStyle.css
@@ -1,3 +1,3 @@
-#gridPane{
--fx-background-image: url("SpelbordKleurenblind.png");
+#root{
+-fx-background-image: url("Spelbord_Colourblind+Kleur.png");
 }
