--- a/bin/view/style/main_menu_style.css
+++ b/bin/view/style/main_menu_style.css
@@ -64,6 +64,10 @@
 }
 
 #btn_joinspel:hover, #btn_exitspel:hover, #btn_hostspel:hover, #btn_hervatspel:hover{
-    -fx-background-color: white;
+    -fx-background-color: rgba(255,255,255,0.5);
+    -fx-text-fill: rgba(255,255,255,0.5);
+}
+#btn_joinspel:pressed, #btn_exitspel:pressed, #btn_hostspel:pressed, #btn_hervatspel:pressed{
     -fx-text-fill: white;
+    -fx-background-color: white;
 }
