--- a/src/view/style/SpelbordStyle.css
+++ b/src/view/style/SpelbordStyle.css
@@ -1,5 +1,5 @@
 #moap {
-    -fx-background-image: url("../img/Spelbord_Bord1_HD.png");
+    -fx-background-image: url("../img/Spelbord_Achtergrond_Leeg.png");
 	-fx-background-position: center center;
     -fx-background-repeat: no-repeat;
 }
