--- a/src/view/style/Lobby_View_Style.css
+++ b/src/view/style/Lobby_View_Style.css
@@ -4,7 +4,7 @@
 
 #gridder{
     -fx-background-image: url("../img/OverlayTemplateRechthoek.png");
-    -fx-background-size:1000 600;
+    -fx-background-size:100%;
     -fx-background-position: center center;
     -fx-background-repeat: stretch;
 }
