--- a/bin/view/style/main_menu_style.css
+++ b/bin/view/style/main_menu_style.css
@@ -9,6 +9,26 @@
 	-fx-background-repeat: stretch;
 }
 
+#overlay{
+    -fx-background-color: rgba(0,0,0,0.7);
+}
+#overlay_window{
+    -fx-background-image: url("../img/OverlayTemplateRechthoek2.png");
+    -fx-background-position: center center;
+    -fx-border-width: 5px;
+    -fx-border-style: solid;
+    -fx-border-color: rgb(220,190,50);
+    -fx-font-size: 16px;
+    -fx-max-width: 400px;
+    -fx-max-height: 230px;
+}
+    #overlay_label{
+        -fx-font-size: 18px;
+        -fx-wrap-text: true;
+        -fx-background-color: rgba(240,240,240,0.3);
+        -fx-font-weight: bold;
+    }
+
 #btn_joinspel{
     -fx-graphic: url("../img/Button_JoinSpel.png");
     -fx-background-color: transparent;
